@@ -1,3 +1,8 @@
+2016-12-16  Carl Hetherington  <cth@carlh.net>
+
+	* Fix failure to write referenced DCPs when they have non-zero
+	entry points (#1021).
+
 2016-12-14  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.10.4 released.
